--- a/style.css
+++ b/style.css
@@ -31,13 +31,16 @@ body{
 
 /* select id news and style */
 #news{
+    margin-left: 10vw;
     background-color: #fff;
     padding: 20px;
     border-bottom: 1px solid #ccc;
 }
 
 .card {
-    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    width: 80vw;
     height: 100%;
     background-color: #fff;
     border-radius: 5px;
@@ -45,6 +48,20 @@ body{
     margin-bottom: 20px;
     overflow: hidden;
 }
+
+.card-image {
+    max-width: 20vw;
+    grid-row: 1/3;
+}
+
+.card-content {
+    margin-top: 2em;
+}
+
+.card-image > img {
+    max-width: inherit;
+}
+
 .card .card_image{
     width: 100%;
     height: 200px;
