--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ body{
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     margin-bottom: 20px;
     overflow: hidden;
+    transition: box-shadow 1s;
+}
+
+.card:hover {
+    box-shadow: 0 0 20px rgba(245, 1, 1, 0.764);
+    transition: box-shadow 1s;
 }
 
 .card-image {
