--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@ body{
 
 /* select id news and style */
 #news{
-    margin-left: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fff;
     padding: 20px;
     border-bottom: 1px solid #ccc;
@@ -86,3 +88,60 @@ body{
     color: #333;
     text-align: center;
 }
+
+#pagination{
+    background-color: #fff;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+#pagination > ul{
+    display: flex;
+    justify-content: center;
+}
+
+#pagination > ul > li{
+    list-style: none;
+    margin: 0 10px;
+}
+
+#pagination > ul > li > a{
+    text-decoration: none;
+    color: #333;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+#pagination > ul > li > a:hover{
+    color: #f50101;
+}
+
+/* create a animated loader */
+#loader {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loader h1{
+    font-size: 30px;
+    font-weight: 600;
+    color: #333;
+    text-align: center;
+}
+
+#finished{
+    display: none;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+}
+
