--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --setTrunc : 0;
+  }
+
 *{
     margin: 0;
     padding: 0;
@@ -31,19 +35,19 @@ body{
 
 /* select id news and style */
 #news{
-    margin-left: 10vw;
     background-color: #fff;
     padding: 20px;
     border-bottom: 1px solid #ccc;
 }
 
 .card {
+    margin-left: 15vw;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    width: 80vw;
+    width: 70vw;
     height: 100%;
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 1em;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     margin-bottom: 20px;
     overflow: hidden;
@@ -61,13 +65,15 @@ body{
 }
 
 .card-content {
-    margin-top: 2em;
+    margin-top: 1em;
 }
 
 .card-image > img {
     max-width: inherit;
 }
-
+.card {
+    font-size: 1.5em;
+}
 .card .card_image{
     width: 100%;
     height: 200px;
@@ -86,3 +92,28 @@ body{
     color: #333;
     text-align: center;
 }
+
+@media screen and (max-width : 1000px) {
+    :root {
+        --setTrunc : 1;
+    }
+    
+    .card {
+        border-radius: .5em;
+        width: 100%;
+        margin-left: 0;
+        grid-template-columns: none;
+        font-size: 1.2em;
+    }
+    .card-image {
+        max-width: 90vw;
+        grid-row: 1/2;
+    }
+    .card-content {
+        grid-row: 2/3;
+    }
+    .card-action {
+        grid-row: 3/4
+    }
+}
+
