--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body{
     text-align: center;
 }
 
-@media screen and (max-width : 1000px) {
+@media (max-width : 1000px) {
     :root {
         --setTrunc : 1;
     }
